packages/yak-swc/css_in_js_parser/src/snapshots/css_parser__tests__parse_css_incomplete_css_1_ending_inside_a_string.snap
---
source: src/lib.rs
expression: "(state, declarations)"
---
(
    ParserState {
        is_inside_string: Some(
            '\'',
        ),
        is_inside_comment: false,
        is_inside_property_value: true,
        is_inside_at_rule: false,
        current_scopes: [
            CssScope {
                name: ".foo",
                scope_type: "selector",
            },
            CssScope {
                name: ".fancy",
                scope_type: "selector",
            },
        ],
        current_declaration: Declaration {
            property: "background",
            value: "url('https://example.com\n    ",
            scope: [
                CssScope {
                    name: ".foo",
                    scope_type: "selector",
                },
                CssScope {
                    name: ".fancy",
                    scope_type: "selector",
                },
            ],
            closed: false,
        },
    },
    [
        Declaration {
            property: "background",
            value: "url('https://example.com\n    ",
            scope: [
                CssScope {
                    name: ".foo",
                    scope_type: "selector",
                },
                CssScope {
                    name: ".fancy",
                    scope_type: "selector",
                },
            ],
            closed: false,
        },
    ],
)
