packages/yak-swc/css_in_js_parser/src/snapshots/css_parser__tests__parse_css_incomplete_css_1_with_media_rule.snap
---
source: src/lib.rs
expression: "(state, declarations)"
---
(
    ParserState {
        is_inside_string: None,
        is_inside_comment: false,
        is_inside_property_value: false,
        is_inside_at_rule: false,
        current_scopes: [
            CssScope {
                name: ".foo",
                scope_type: "selector",
            },
            CssScope {
                name: ".fancy",
                scope_type: "selector",
            },
            CssScope {
                name: "@media (max-width: 600px)",
                scope_type: "at-rule",
            },
            CssScope {
                name: ".baz",
                scope_type: "selector",
            },
        ],
        current_declaration: Declaration {
            property: "",
            value: "",
            scope: [],
            closed: false,
        },
    },
    [
        Declaration {
            property: "background",
            value: "url('https://example.com')",
            scope: [
                CssScope {
                    name: ".foo",
                    scope_type: "selector",
                },
                CssScope {
                    name: ".fancy",
                    scope_type: "selector",
                },
            ],
            closed: true,
        },
        Declaration {
            property: "color",
            value: "red",
            scope: [
                CssScope {
                    name: ".foo",
                    scope_type: "selector",
                },
                CssScope {
                    name: ".fancy",
                    scope_type: "selector",
                },
                CssScope {
                    name: "@media (max-width: 600px)",
                    scope_type: "at-rule",
                },
                CssScope {
                    name: ".baz",
                    scope_type: "selector",
                },
            ],
            closed: true,
        },
    ],
)
